Repair the jumping form, reopen the character reset, transform the voice, jump bubbles, basketball shadow and the fourth act witch behaviour

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <title>小兽的生日大冒险</title>
-  <link rel="stylesheet" href="./styles.css?v=20260211p" />
+  <link rel="stylesheet" href="./styles.css?v=20260213scene4spacing" />
 </head>
 <body>
   <div id="app">
@@ -45,15 +45,15 @@
             alt="结束页背景"
           />
           <button id="home-btn" class="alien-home-btn" aria-label="回到首页">
-            <img src="../assets/ui/alien_home_button.png" alt="回到首页" />
+            <img src="../assets/ui/alien_home_button_yellow.png" alt="回到首页" />
           </button>
         </div>
       </div>
     </section>
   </div>
 
-  <script src="./vendor/phaser.min.js?v=20260211p"></script>
-  <script src="./constants.js?v=20260211p"></script>
-  <script src="./main.js?v=20260211p"></script>
+  <script src="./vendor/phaser.min.js?v=20260213scene4spacing"></script>
+  <script src="./constants.js?v=20260213scene4spacing"></script>
+  <script src="./main.js?v=20260213scene4spacing"></script>
 </body>
 </html>
