Fixed the issue of ghosting of the gift box and character appearance changes in the final scene, and completed the Web Tab icon/title update.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="refresh" content="0; url=./src/index.html" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/ui/favicon-32.png?v=20260214tabicon-big1" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/ui/apple-touch-icon.png?v=20260214tabicon-big1" />
   <title>小兽的生日大冒险</title>
   <style>
     body { font-family: "Songti SC", "PingFang SC", serif; padding: 40px; }
