--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <title>小兽的生日大冒险</title>
-  <link rel="stylesheet" href="./styles.css?v=20260213scene4spacing" />
+  <title>你今天变成了老兽</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/ui/favicon-32.png?v=20260214tabicon-big1" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/ui/apple-touch-icon.png?v=20260214tabicon-big1" />
+  <link rel="stylesheet" href="./styles.css?v=20260214endingcanvasfitfix" />
 </head>
 <body>
   <div id="app">
