Add the level mechanism of the game

--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
     </section>
   </div>
 
-  <script src="./vendor/phaser.min.js?v=20260213scene4spacing"></script>
-  <script src="./constants.js?v=20260213scene4spacing"></script>
-  <script src="./main.js?v=20260213scene4spacing"></script>
+  <script src="./vendor/phaser.min.js?v=20260215hpfix1"></script>
+  <script src="./constants.js?v=20260215hpfix1"></script>
+  <script src="./main.js?v=20260215hpfix1"></script>
 </body>
 </html>
