--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,21 @@
   <title>你今天变成了老兽</title>
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/ui/favicon-32.png?v=20260214tabicon-big1" />
   <link rel="apple-touch-icon" sizes="180x180" href="../assets/ui/apple-touch-icon.png?v=20260214tabicon-big1" />
-  <link rel="stylesheet" href="./styles.css?v=20260214endingcanvasfitfix" />
+  <link rel="stylesheet" href="./styles.css?v=20260215scheme3" />
 </head>
 <body>
   <div id="app">
     <section id="landing" class="screen landing">
-      <button id="start-btn" class="alien-start-btn" aria-label="开始游戏">
-        <img src="../assets/ui/alien_play_button.png" alt="开始游戏" />
-      </button>
+      <div class="landing-canvas pixel-canvas-frame">
+        <img
+          class="landing-bg-image"
+          src="../assets/scenes/chatgpt_landing_bg.png"
+          alt="首页背景"
+        />
+        <button id="start-btn" class="alien-start-btn" aria-label="开始游戏">
+          <img src="../assets/ui/alien_play_button.png" alt="开始游戏" />
+        </button>
+      </div>
     </section>
 
     <section id="game" class="screen game hidden">
@@ -40,7 +47,7 @@
         </div>
       </div>
       <div id="ending" class="ending hidden">
-        <div class="ending-card ending-card--alien">
+        <div class="ending-card ending-card--alien pixel-canvas-frame">
           <img
             class="ending-bg-image"
             src="../assets/scenes/ending_bg_chatgpt_room.png"
